--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "twin.macro": "^2.8.2",
     "usehooks-ts": "^2.4.2"
   },
   "devDependencies": {
