--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@discordjs/rest": "^0.5.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -17,6 +18,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
     "@reduxjs/toolkit": "^1.8.1",
     "apollo-server-core": "^3.6.3",
     "apollo-server-micro": "^3.6.3",
