--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "usehooks-ts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.12",
