--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "twin.macro": "^2.8.2",
-    "usehooks-ts": "^2.4.2"
+    "usehooks-ts": "^2.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
@@ -53,6 +54,7 @@
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.12",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
