--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "axios": "^0.26.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0-beta1",
+    "buffer-to-stream": "^1.0.0",
     "daisyui": "^2.15.2",
     "discord.js": "^13.7.0",
+    "express-fileupload": "^1.4.0",
     "firebase-admin": "^10.2.0",
     "graphql": "^16.3.0",
     "micro": "^9.3.4",
     "next": "12.1.0",
     "next-auth": "^4.3.4",
+    "next-connect": "^0.12.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
@@ -49,6 +53,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
